# otus_course_homework_6

./: BlockProcessor.h  CMakeLists.txt  CommandProcessor.h  Logger.h  README.md  main.cpp
.github/workflows/: release.yml
include/: BlockProcessor.h  CommandProcessor.h  Logger.h  Observer.h
source/: BlockProcessor.cpp  CommandProcessor.cpp
test/: BulkTests.cpp  CMakeLists.txt
